--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<head>
-<meta http-equiv="refresh" content="1; url=https://www.ortaokul.fun/">
-</head>
+<body background="https://thumbs.gfycat.com/CircularCriminalGoshawk-size_restricted.gif">
+<center><h1>YAKINDA!</h1></center>
+</body>
