--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 				cunku tarihleri gecmistir. Sayfada 'countDownOpen' isimli sinifa sahip eleman yoksa sayaç proğramı pasif hale getirilir 
 				yani 'setInterval' fonksiyonu silinir.
 			*/
-			var dayText	= "Gün";
-			var hourText	= "Saat";
-			var minuteText	= "Dakika";
-			var secondText	= "Saniye";
+			var dayText	= "10";
+			var hourText	= "0";
+			var minuteText	= "0";
+			var secondText	= "0";
 			var x = setInterval(function(){ //sayacı belirli aralıklarla yenile
 				if ($(".countDownClose").length == $(".countDownElement").length){ /*butun tarihler gecmis zamanli ise*/
 					clearInterval(x); 
