--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
-<body style="backgroud-color: #49b675; font-family: sans-serif"><center>
-<h1>YAKINDA!</h1>
+<body style="background-color: #49b675; font-family: sans-serif"><center>
+<img src="https://media.discordapp.net/attachments/997204872858452143/997459590755131392/20220715_140312.png" width="100%" height="100%">
+<h1>YAKINDA!</h1><br>
+<audio controls autoplay>
+  <source src="horse.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
 </center></body>
