--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<body style="background-color: #49b675; font-family: sans-serif"><center>
-<img src="https://media.discordapp.net/attachments/997204872858452143/997459590755131392/20220715_140312.png" width="100%" height="100%">
+<head><meta name="viewport" content="width=device-width, initial-scale=1.0"></head>
+<body style="color:white;background-color: #49b675; font-family: sans-serif"><center>
 <h1>YAKINDA!</h1><br>
-<audio controls autoplay>
-  <source src="GTA San Andreas Theme Song Full _ _(MP3_70K).mp3" type="audio/mpeg">
+<audio controls autoplay="true">
+  <source src="https://cdn.glitch.global/30c0d303-135a-477d-85ee-1caba9d9ab52/GTA%20San%20Andreas%20Theme%20Song%20Full%20_%20_(MP3_70K).mp3?v=1657891732796" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
 </center></body>
