--- a/index.html
+++ b/index.html
@@ -1,3 +1,2 @@
-<html>
-Sa
-</html>
+<meta http-equiv="refresh" content="1; url=https://discord.com/users/708686612565065748">
+Yönlendiriliyorsunuz...
