--- a/index.html
+++ b/index.html
@@ -9,23 +9,28 @@
 <style>
 body {
 background-color: #1A202C;
+color: white;
 }
 </style>
   <body>
     <div class="container">
 <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
       <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-        <img src="https://furkancankar.github.io/cdn/20210831_043254.png" class="bi me-2" width="40" height="32">
+        <img src="https://furkancankar.github.io/cdn/20210831_043254.png" class="bi me-2" width="1280" height="316">
       </a>
 
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="#" class="nav-link px-2 link-secondary">Hakkımda</a></li>
+        <li><a href="#" class="nav-link px-2 link-dark">Hakkımda</a></li>
         <li><a href="#" class="nav-link px-2 link-dark">Hesaplarım</a></li>
         <li><a href="#" class="nav-link px-2 link-dark">Projelerim</a></li>
       </ul>
 
     </header>
-
+<div class="card" style="background-color:transparent">
+  <div class="card-body">
+    This is some text within a card body.
+  </div>
+</div>
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
