--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="tr">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>FurkanCanKar</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
 <style>
@@ -14,7 +14,7 @@ color: white;
 </style>
   <body>
     <div class="container">
-<header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+<header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom navbar-fixed">
       <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
         <img src="https://furkancankar.github.io/cdn/20210831_043254.png" class="bi me-2" width="1280" height="316">
       </a>
@@ -26,7 +26,7 @@ color: white;
       </ul>
 
     </header>
-<div class="card" style="background-color:transparent">
+<div id="hakkimda" class="card" style="background-color:transparent">
   <div class="card-body">
     This is some text within a card body.
   </div>
