--- a/index.html
+++ b/index.html
@@ -4,23 +4,26 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FurkanCanKar</title>
+    <link href="https://pro.fontawesome.com/releases/v6.0.0-beta1/css/all.css" rel="stylesheet"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
 <style>
 body {
 background-color: #1A202C;
 color: white;
+.yesil { 
+color: #77dd77;
 }
 </style>
   <body>
     <div class="container">
 <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom navbar-fixed">
       <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-        <img src="https://furkancankar.github.io/cdn/20210831_043254.png" class="bi me-2" width="1280" height="316">
+        <img src="https://furkancankar.github.io/cdn/20210831_043254.png" class="bi me-2" width="100%" height="100%">
       </a>
 
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="#" class="nav-link px-2 link-dark">Hakkımda</a></li>
+        <li><a href="#hakkimda" class="nav-link px-2 link-dark">Hakkımda</a></li>
         <li><a href="#" class="nav-link px-2 link-dark">Hesaplarım</a></li>
         <li><a href="#" class="nav-link px-2 link-dark">Projelerim</a></li>
       </ul>
@@ -28,7 +31,7 @@ color: white;
     </header>
 <div id="hakkimda" class="card" style="background-color:transparent">
   <div class="card-body">
-    This is some text within a card body.
+    <h2>Hakkımda</h2>
   </div>
 </div>
 </div>
