--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@ color: #77dd77;
       </a>
 
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="#hakkimda" class="nav-link px-2 link-dark">Hakkımda</a></li>
-        <li><a href="#" class="nav-link px-2 link-dark">Hesaplarım</a></li>
-        <li><a href="#" class="nav-link px-2 link-dark">Projelerim</a></li>
+        <li><a href="#hakkimda" class="nav-link px-2 link-light">Hakkımda</a></li>
+        <li><a href="#" class="nav-link px-2 link-light">Hesaplarım</a></li>
+        <li><a href="#" class="nav-link px-2 link-light">Projelerim</a></li>
       </ul>
 
     </header>
