--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@ color: #77dd77;
       </ul>
 
     </header>
-<div id="hakkimda" class="card" style="background-color:transparent">
+<div id="hakkimda" class="border border-secondary card" style="background-color:transparent">
   <div class="card-body">
-    <h2>Hakkımda</h2>
+    <h2><i class="fa-thin fa-book-open yesil"></i> Hakkımda</h2>
   </div>
 </div>
 </div>
