--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ color: #77DD77;
 <div id="hakkimda" class="border border-secondary card" style="background-color:transparent">
   <div class="card-body">
     <h2><i class="fa-thin fa-book-open yesil"></i> Hakkımda</h2>
+<p>Merhabalar, ben Furkan Can Balıkesirliyim ve yaklaşık 2 yıldır web tasarım ve yazılımı ile uğraşıyorum. Şuanda bazı web projeleri yapıyorum vakit kaldıkça python dili üzerinde çalışıyorum.
   </div>
 </div>
 </div>
