--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {
 background-color: #1A202C;
 color: white;
 }
-i { 
+.yesil { 
 color: #77DD77;
 }
 </style>
@@ -34,7 +34,8 @@ color: #77DD77;
   <div class="card-body">
     <h2><i class="fa-thin fa-book-open yesil"></i> Hakkımda</h2>
 <p>Merhabalar, ben Furkan Can Balıkesirliyim ve yaklaşık 2 yıldır web tasarım ve yazılımı ile uğraşıyorum. Şuanda bazı web projeleri yapıyorum vakit kaldıkça python dili üzerinde çalışıyorum.
-  </div>
+<p><b>Kullandığım Yazılım Dilleri:</b> <i class="fa-brands fa-js" style="color:#ffd700"></i> <i class="fa-brands fa-html5" style="color:#ff7f00"></i> <i class="fa-brands fa-css3-alt" style="color:#0000ff"></i> <i class="fa-brands fa-python" style="color:#3E7EAE"></i>
+</div>
 </div>
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
