--- a/index.html
+++ b/index.html
@@ -34,10 +34,14 @@ color: #77DD77;
   <div class="card-body">
     <h2><i class="fa-thin fa-book-open yesil"></i> Hakkımda</h2>
 <p>Merhabalar, ben Furkan Can Balıkesirliyim ve yaklaşık 2 yıldır web tasarım ve yazılımı ile uğraşıyorum. Şuanda bazı web projeleri yapıyorum vakit kaldıkça python dili üzerinde çalışıyorum.
-<p><b>Kullandığım Yazılım Dilleri Ve Teknolojiler:</b></p><p> <i class="fa-brands fa-js" style="color:#ffd700"></i> <i class="fa-brands fa-html5" style="color:#ff7f00"></i> <i class="fa-brands fa-css3-alt" style="color:#0000ff"></i> <i class="fa-brands fa-python" style="color:#3E7EAE"></i> <i class="fa-brands fa-npm" style="color:#CC3534"></i> <i class="fa-brands fa-node-js" style="color:#3C873A"></i> <i class="fa-brands fa-bootstrap" style="color:#712CF9"></i>
+<p><b>Kullandığım Yazılım Dilleri Ve Teknolojiler:</b> <a data-bs-toggle="tooltip" data-bs-title="Javascript"><i class="fa-brands fa-js" style="color:#ffd700"></i></a> <i class="fa-brands fa-html5" style="color:#ff7f00"></i> <i class="fa-brands fa-css3-alt" style="color:#0000ff"></i> <i class="fa-brands fa-python" style="color:#3E7EAE"></i> <i class="fa-brands fa-npm" style="color:#CC3534"></i> <i class="fa-brands fa-node-js" style="color:#3C873A"></i> <i class="fa-brands fa-bootstrap" style="color:#712CF9"></i>
 </div>
 </div>
 </div>
+<script>
+const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+</script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
