--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@ color: #77DD77;
 
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
         <li><a href="#hakkimda" class="nav-link px-2 link-light">Hakkımda</a></li>
-        <li><a href="#" class="nav-link px-2 link-light">Hesaplarım</a></li>
+        <li><a href="#hesaplarim" class="nav-link px-2 link-light">Hesaplarım</a></li>
         <li><a href="#" class="nav-link px-2 link-light">Projelerim</a></li>
       </ul>
 
     </header>
+<div class="row g-2">
+<div class="col-lg">
 <div id="hakkimda" class="border border-secondary card" style="background-color:transparent">
   <div class="card-body">
     <h2><i class="fa-thin fa-book-open yesil"></i> Hakkımda</h2>
@@ -37,9 +39,14 @@ color: #77DD77;
 <p><b>Kullandığım Yazılım Dilleri Ve Teknolojiler:</b> <h3><i class="fa-brands fa-js" style="color:#ffd700"></i> <i class="fa-brands fa-html5" style="color:#ff7f00"></i> <i class="fa-brands fa-css3-alt" style="color:#0000ff"></i> <i class="fa-brands fa-python" style="color:#3E7EAE"></i> <i class="fa-brands fa-npm" style="color:#CC3534"></i> <i class="fa-brands fa-node-js" style="color:#3C873A"></i> <i class="fa-brands fa-bootstrap" style="color:#712CF9"></i></h3></p>
 </div>
 </div>
-<div id="hakkimda" class="border border-secondary card" style="background-color:transparent">
+</div>
+<div class="col-lg">
+<div id="hesaplarim" class="border border-secondary card" style="background-color:transparent">
   <div class="card-body">
-<h2>Hesaplarım</h2>
+<h2><i class="fa-light fa-share-nodes yesil"></i> Hesaplarım</h2>
+<a class="btn btn-dark" style="background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);"><i class="fa-brands fa-instagram"></i> Instagram</a>
+</div>
+</div>
 </div>
 </div>
 </div>
