--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ color: #77DD77;
 <div id="hesaplarim" class="border border-secondary card" style="background-color:transparent">
   <div class="card-body">
 <h2><i class="fa-light fa-share-nodes yesil"></i> Hesaplarım</h2>
-<a class="btn btn-dark" style="background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);"><i class="fa-brands fa-instagram"></i> Instagram</a>
+<a style="https://instagr.am/furkancankar" class="btn btn-dark btn-lg" style="background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%); box-shadow:none"><i class="fa-brands fa-instagram"></i> Instagram</a> <a href="https://github.com/furkancankar" class="btn btn-dark btn-lg" style="box-shadow:none;background-color:#333"><i class="fa-brands fa-github"></i> Github</a>
 </div>
 </div>
 </div>
