--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@ color: #77DD77;
         <img src="https://furkancankar.github.io/cdn/20210831_043254.png" class="bi me-2" width="100%" height="100%">
       </a>
 
-      <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="#hakkimda" class="nav-link px-2 link-light">Hakkımda</a></li>
-        <li><a href="#hesaplarim" class="nav-link px-2 link-light">Hesaplarım</a></li>
-        <li><a href="#" class="nav-link px-2 link-light">Projelerim</a></li>
-      </ul>
+      
 
     </header>
 <div class="row g-2">
@@ -44,9 +40,14 @@ color: #77DD77;
 <div id="hesaplarim" class="border border-secondary card" style="background-color:transparent">
   <div class="card-body">
 <h2><i class="fa-light fa-share-nodes yesil"></i> Hesaplarım</h2>
-<a href="https://instagr.am/furkancankar10" class="btn btn-dark btn-lg" style="background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%); box-shadow:none;"><i class="fa-brands fa-instagram"></i> Instagram</a> <a href="https://github.com/furkancankar" class="btn btn-dark btn-lg" style="box-shadow:none;background-color:#333"><i class="fa-brands fa-github"></i> Github</a>
+<a href="https://instagr.am/furkancankar10" class="btn btn-dark btn-lg" style="background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%); box-shadow:none;"><i class="fa-brands fa-instagram"></i> Instagram</a> <a href="https://github.com/furkancankar" class="btn btn-dark btn-lg" style="box-shadow:none;background-color:#333"><i class="fa-brands fa-github"></i> Github</a> <a href="https://discord.com/users/708686612565065748" class="btn btn-dark btn-lg" style="background-color:#5865F2; box-shadow:none"><i class="fa-brands fa-discord"></i> Discord</a>
 </div>
-</div>
+</div><br>
+<div id="hesaplarim" class="border border-secondary card" style="background-color:transparent">
+  <div class="card-body">
+<h2><i class="fa-light fa-file yesil"></i> Projelerim</h2>
+<p>Şuanda Aktif Proje Bulunmamaktadır.</p>
+</div></div>
 </div>
 </div>
 </div>
