--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@ color: #77DD77;
 <div id="hesaplarim" class="border border-secondary card" style="background-color:transparent">
   <div class="card-body">
 <h2><i class="fa-light fa-share-nodes yesil"></i> Hesaplarım</h2>
-<a href="https://instagr.am/furkancankar10" class="btn btn-dark" style="background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%); box-shadow:none;"><i class="fa-brands fa-instagram"></i> Instagram</a> <a href="https://github.com/furkancankar" class="btn btn-dark" style="box-shadow:none;background-color:#333"><i class="fa-brands fa-github"></i> Github</a> <a href="https://discord.com/users/708686612565065748" class="btn btn-dark" style="background-color:#5865F2; box-shadow:none"><i class="fa-brands fa-discord"></i> Discord</a>
+<a target="_blank" href="https://instagr.am/furkancankar10" class="btn btn-dark" style="background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%); box-shadow:none;"><i class="fa-brands fa-instagram"></i> Instagram</a> <a target="_blank" href="https://github.com/furkancankar" class="btn btn-dark" style="box-shadow:none;background-color:#333"><i class="fa-brands fa-github"></i> Github</a> <a target="_blank" href="https://discord.com/users/708686612565065748" class="btn btn-dark" style="background-color:#5865F2; box-shadow:none"><i class="fa-brands fa-discord"></i> Discord</a>
 </div>
 </div><br>
-<div id="hesaplarim" class="border border-secondary card" style="background-color:transparent">
+<div id="projelerim" class="border border-secondary card" style="background-color:transparent">
   <div class="card-body">
 <h2><i class="fa-light fa-file yesil"></i> Projelerim</h2>
 <p>Şuanda Aktif Proje Bulunmamaktadır.</p>
