--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@ color: #77DD77;
 </div></div>
 </div>
 </div>
+
+
+  <footer class="py-3 my-4">
+<p class="text-center">Bu site Furkan Can tarafından <a href="https://getbootstrap.com" style="color:#712CF9"><i class="fa-brands fa-bootstrap"></i> Bootstrap</a> kullanılarak tasarlanmıştır.</p>
+  </footer>
+
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
