--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@ color: #77DD77;
 </div>
 
 
-  <footer class="py-3 my-4">
-<p class="text-center">Bu site Furkan Can tarafından <a href="https://getbootstrap.com" style="color:#712CF9"><i class="fa-brands fa-bootstrap"></i> Bootstrap</a> kullanılarak tasarlanmıştır.</p>
+  <footer class="py-3 my-4" style="border-color:white">
+<p class="text-center">Bu site Furkan Can tarafından <a href="https://getbootstrap.com" style="color:#712CF9; text-decoration:none"><i class="fa-brands fa-bootstrap"></i> Bootstrap</a> kullanılarak tasarlanmıştır.</p>
   </footer>
 
 </div>
