--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ color: #77DD77;
 
   <footer class="py-3 my-4" style="color:white">
 <hr>
-<p class="text-center">Bu site Furkan Can tarafından <a href="https://getbootstrap.com" style="color:#712CF9; text-decoration:none"><i class="fa-brands fa-bootstrap"></i> Bootstrap</a> kullanılarak tasarlanmıştır.</p>
+<p class="text-center">© FurkanCanKar 2022</p>
   </footer>
 
 </div>
