--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ color: #77DD77;
 <div id="hakkimda" class="border border-secondary card" style="background-color:transparent">
   <div class="card-body">
     <h2><i class="fa-thin fa-book-open yesil"></i> Hakkımda</h2>
-<p>Merhaba, ben Furkan Can ben bir <span class="typewrite" data-period="2000" data-words='[ " Developer.", " Designer.", " Creator."]'></span>
+<p>Merhaba, ben Furkan Can ben bir <span class="typewrite" data-period="2000" data-words='[ " web yazılım geliştiricisiyim.", " lise öğrencisiyim.", " Creator."]'></span>
 <p><b>Kullandığım Yazılım Dilleri Ve Teknolojiler:</b> <h3><i class="fa-brands fa-js" style="color:#ffd700"></i> <i class="fa-brands fa-html5" style="color:#ff7f00"></i> <i class="fa-brands fa-css3-alt" style="color:#0000ff"></i> <i class="fa-brands fa-python" style="color:#3E7EAE"></i> <i class="fa-brands fa-npm" style="color:#CC3534"></i> <i class="fa-brands fa-node-js" style="color:#3C873A"></i> <i class="fa-brands fa-bootstrap" style="color:#712CF9"></i></h3></p>
 </div>
 </div>
