--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@ color: #77DD77;
 <div id="hakkimda" class="border border-secondary card" style="background-color:transparent">
   <div class="card-body">
     <h2><i class="fa-thin fa-book-open yesil"></i> Hakkımda</h2>
-<p>Merhaba, ben Furkan Can lise öğrencisi ve web yazılım geliştiricisiyim.
-<p><b>Yaşadığım Şehir:</b> <a href="https://www.google.com.tr/maps/place/Karesi%2FBal%C4%B1kesir/@39.7328631,27.8356993,9z/data=!4m5!3m4!1s0x14b6fbc75313747d:0x2b0a561006e4dca6!8m2!3d39.7848385!4d27.8780275?gl=tr" class="yesil">Karesi, Balıkesir</a></p>
+<p>Merhaba, ben Furkan Can lise öğrencisi ve web yazılım geliştiricisiyim. <a href="https://www.google.com.tr/maps/place/Karesi%2FBal%C4%B1kesir/@39.7328631,27.8356993,9z/data=!4m5!3m4!1s0x14b6fbc75313747d:0x2b0a561006e4dca6!8m2!3d39.7848385!4d27.8780275?gl=tr" class="yesil">Karesi, Balıkesir</a> yaşıyorum ve <span style="color:yellow">Galata</span><span style="color:red">Saray</span> takımını destekliyorum :D. Web yazılımını <a href="https://nodejs.org" style="color:#3C873A"><i class="fa-brands fa-node-js"></i> Node.js</a>, tasarımını ise <a style="color:#712CF9" href="https://getbootstrap.com"><i class="fa-brands fa-bootstrap"></i> Bootstrap</a>
 
-<p><b>Tuttuğum Takım:</b> <span style="color:yellow">Galata</span><span style="color:red">Saray</span></p>
-<p><b>Kullandığım Yazılım Dilleri Ve Teknolojiler:</b> <h3><i class="fa-brands fa-js" style="color:#ffd700"></i> <i class="fa-brands fa-html5" style="color:#ff7f00"></i> <i class="fa-brands fa-css3-alt" style="color:#0000ff"></i> <i class="fa-brands fa-python" style="color:#3E7EAE"></i> <i class="fa-brands fa-npm" style="color:#CC3534"></i> <i class="fa-brands fa-node-js" style="color:#3C873A"></i> <i class="fa-brands fa-bootstrap" style="color:#712CF9"></i></h3></p>
+
+<p><b>Tuttuğum Takım:</b> </p>
+<p><b>Kullandığım Yazılım Dilleri Ve Teknolojiler:</b> <h3><i class="fa-brands fa-js" style="color:#ffd700"></i> <i class="fa-brands fa-html5" style="color:#ff7f00"></i> <i class="fa-brands fa-css3-alt" style="color:#0000ff"></i> <i class="fa-brands fa-python" style="color:#3E7EAE"></i> <i class="fa-brands fa-npm" style="color:#CC3534"></i> <i class="fa-brands fa-node-js"></i> </h3></p>
 </div>
 </div>
 </div>
