--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
 <body>
-<h1>Site Bakımda</h1>
-<p>Yusuf göt veriyo</p>
-<p>© Furkan Can</p>
+<h1>Drill Boy Yusuf</h1>
+<img src="cdn/IMG20221021133853.jpg" height="100%" witdh="100%">
 </body>
 </html>
