--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </head>
 <body>
 <h1>Drill Boy Yusuf</h1>
-<img src="cdn/IMG20221021133853.jpg" height="100%" witdh="100%">
+<img src="cdn/IMG20221021133853.jpg" height="100%" width="100%">
 </body>
 </html>
