--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <link rel="stylesheet" type="text/css" href="css.css"/>
 <html>
   <head>
-    
+    <meta charset="UTF-8">
+  <meta name="description" content="web">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <div class="home">
