--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ a {text-decoration:none}
 <div id="" class="border border-secondary card" style="background-color:transparent">
   <div class="card-body">
     <h2>samp-discord-bot</h2>
-    <p style="font-size: 22px;">Discord bot for SAMP. Shows active players.<a style="text-decoration: none;" href="https://https://github.com/furkancankar/samp-discord-bot"> Github Repo</a></p></div></div></div>
+    <p style="font-size: 22px;">Discord bot for SAMP. Shows active players.<a style="text-decoration: none;" href="https://github.com/furkancankar/samp-discord-bot"> Github Repo</a></p></div></div></div>
 
 </div>
 </div>
