--- a/index.html
+++ b/index.html
@@ -31,16 +31,15 @@ a {text-decoration:none}
   <div class="card-body">
     <h2><i class="fa-thin fa-book-open yesil"></i> About</h2>
 <p style="font-size: 22px;">I am Furkan Can, a high school student in Turkey. I have been interested in software for 3 years and I do web development. I have advanced knowledge of HTML and CSS and I develop medium-level projects with Node.js. I am currently trying to learn machine learning and React.js and I am also interested in educational technologies. I like  electronics and reading scientific articles. I am currently trying to improve myself with small projects. My future goal is to specialize in the backend field and work on bigger projects.</p>
- <p> Contact me: <a style="text-decoration: none; color: #E1306C;" href="https://instagram.com/furkancankartech"><i class="fa-brands fa-instagram"></i> Instagram</a>  <a style="text-decoration: none; color: #5865F2;" href="https://discord.com/channels/@me/708686612565065748"><i class="fa-brands fa-discord"></i> Discord</a> <a style="text-decoration: none; color: #e8eaea;" href="https://github.com/furkancankar"><i class="fa-brands fa-github"></i> Github</a></p><p>  <a style="text-decoration: none; color: red;" href="mailto:furkancankar0@yandex.com"><i class="fa-brands fa-yandex-international"></i> Yandex Mail</a> <a style="text-decoration: none; color: #4285F4;" href="mailto:furkancankar0@gmail.com"><i class="fa-brands fa-google"></i> Gmail</a> <a style="text-decoration: none; color: #4285F4;" href=""><i class="fa-brands fa-linkedin"></i> LinkedIn</a></p>
   </div>
 </div>
 </div>
 <div class="col-lg">
 <div id="" class="border border-secondary card" style="background-color:transparent">
   <div class="card-body">
-<h2><i class="fa-light fa-laptop-code yesil"></i> Techs And Langs I Use</h2>
-<img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"> <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white"> <img src="https://img.shields.io/badge/JavaScript-323330?style=for-the-badge&logo=javascript&logoColor=F7DF1E"> <img src="https://img.shields.io/badge/json-5E5C5C?style=for-the-badge&logo=json&logoColor=white"> <img src="https://img.shields.io/badge/Python-FFD43B?style=for-the-badge&logo=python&logoColor=blue"> <img src="https://img.shields.io/badge/Node%20js-339933?style=for-the-badge&logo=nodedotjs&logoColor=white"> <img src="https://img.shields.io/badge/Font_Awesome-339AF0?style=for-the-badge&logo=fontawesome&logoColor=white"> <img src="https://img.shields.io/badge/Handlebars%20js-f0772b?style=for-the-badge&logo=handlebarsdotjs&logoColor=black"> <img src="https://img.shields.io/badge/Express%20js-000000?style=for-the-badge&logo=express&logoColor=white"> <img src="https://img.shields.io/badge/Bootstrap-563D7C?style=for-the-badge&logo=bootstrap&logoColor=white">
-</div>
+<h2><i class="fa-light fa-books yesil"></i> Blog</h2>
+Not found
+  </div>
 </div>
 </div></div><br><hr>
   <h2 class="text-center"><i class="fa-light fa-file-chart-line yesil"></i> My Projects</h2><br>
