--- a/otistik.html
+++ b/otistik.html
@@ -2,4 +2,4 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <h1 style="color:purple">OTİSTİK MERYEM</h1>
-<img src="/IMG20240405152157.jpg">
+<img height="100%" width="100%" src="/IMG20240405152157.jpg">
