--- a/yusufexe.html
+++ b/yusufexe.html
@@ -1,4 +1,5 @@
 <h1>KİMİ SİLMEK İSTEDİĞİNİZİ SEÇİN</h1>
 <h4><a style="color:red">chuus vo yu vann tu dilete</h4>
-<a href="/otistik.html">MERYEM</a>
-<a href="https://youtube.com/shorts/tsjbBC3goKM?si=fxxctln0-OIX-VP6">YUSUF</a>
+<h1><a href="/otistik.html">MERYEM</a></h1><br>
+<h1><a href="https://youtube.com/shorts/tsjbBC3goKM?si=fxxctln0-OIX-VP6">YUSUF</a>
+</h1>
